<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFE9BD"
        tools:context=".Menu">

    <Button
            android:id="@+id/bStart"
            android:text="@string/button_START"
            android:textSize="@dimen/menu_b_text_size"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textAllCaps="false"
            android:background="@drawable/menu_b"
            android:layout_height="@dimen/Zero_dp"
            android:layout_width="@dimen/Zero_dp"
            app:layout_constraintHeight_percent="@dimen/menu_btn_height"
            app:layout_constraintWidth_percent="@dimen/menu_btn_width"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bQuit" app:layout_constraintTop_toTopOf="@+id/guideline2"/>

    <Button
            android:id="@+id/bQuit"
            android:text="@string/button_Quit"
            android:textSize="@dimen/menu_b_text_size"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textAllCaps="false"
            android:background="@drawable/menu_b"
            android:layout_height="@dimen/Zero_dp"
            android:layout_width="@dimen/Zero_dp"
            app:layout_constraintHeight_percent="@dimen/menu_btn_height"
            app:layout_constraintWidth_percent="@dimen/menu_btn_width"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bStart" app:layout_constraintBottom_toTopOf="@+id/guideline"/>

    <ImageView
            android:id="@+id/Menu_Title"
            android:src="@drawable/logo_last"
            android:contentDescription="@string/Menu_Title"
            android:layout_height="@dimen/Zero_dp"
            android:layout_width="@dimen/Zero_dp"
            app:layout_constraintHeight_percent="0.30"
            app:layout_constraintWidth_percent="0.885"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.005" android:layout_marginTop="8dp"/>


    <TextView
            android:text="@string/menu_high_score"
            app:fontFamily="@font/numbersfont"
            android:textSize="52sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/highScore"
            app:layout_constraintTop_toBottomOf="@+id/Menu_Title" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintVertical_bias="0.79"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.88"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.56"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.08"/>


</android.support.constraint.ConstraintLayout>